"Updated backend and frontend code: changed MongoDB URI, modified post controller and model, deleted image files, and updated frontend components for post list, navbar, and add post page."

--- a/backend-app/.env
+++ b/backend-app/.env
@@ -1,3 +1,3 @@
 PORT=3001
-MONGO_URI=mongodb://localhost:27017/test
+MONGO_URI=mongodb+srv://stider456:0123654i@test.uasc7uv.mongodb.net/
 JWT_SECRET=test12345
