--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -13,7 +13,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "react": "^18.3.1",
+    "react-avatar-editor": "^13.0.2",
     "react-dom": "^18.3.1",
+    "react-easy-crop": "^5.0.8",
+    "react-icons": "^5.3.0",
+    "react-image": "^4.1.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
